@@ -34,24 +34,33 @@
 #' @param include.rest [\code{logical(1)}]\cr
 #'   Include all other columns?
 #'   Default is \code{TRUE}.
+#' @template arg_opgetter_dob
+#' @template arg_opgetter_eol
 #' @param ... [any] \cr
 #'   Currently ignored.
 #' @return [\code{data.frame}].
 #' @export
 as.data.frame.OptPathDF = function(x, row.names = NULL, optional = FALSE,
-  include.x = TRUE, include.y = TRUE, include.rest = TRUE, ...) {
+  include.x = TRUE, include.y = TRUE, include.rest = TRUE,
+  dob = x$env$dob, eol = x$env$eol, ...) {
 
   assertFlag(include.x)
   assertFlag(include.y)
   assertFlag(include.rest)
+  dob = asInteger(dob)
+  eol = asInteger(eol)
 
   if (!include.x && !include.y && !include.rest)
     stopf("Not able to create data.frame from opt.path. You need to include something!")
 
-  res = makeDataFrame(nrow = getOptPathLength(x), ncol = 0)
+  ind = getOptPathDobAndEolIndex(x, dob, eol)
+  if (!any(ind))
+    stopf("No elements where selected (via 'dob' and 'eol')!")
+
+  res = makeDataFrame(nrow = sum(ind), ncol = 0)
 
   if (include.x || include.y) {
-    df = x$env$path
+    df = x$env$path[ind, , drop = FALSE]
     y.cols = which(colnames(df) %in% x$y.names)
     if (include.x)
       res = cbind(res, df[, -y.cols, drop = FALSE])
@@ -60,14 +69,14 @@ as.data.frame.OptPathDF = function(x, row.names = NULL, optional = FALSE,
     res = convertDataFrameCols(res, chars.as.factor = TRUE)
   }
   if (include.rest) {
-    res = cbind(res, dob = x$env$dob, eol = x$env$eol)
+    res = cbind(res, dob = x$env$dob[ind], eol = x$env$eol[ind])
     # if err message / exec time included, add it
     if (!is.null(x$env$error.message))
-      res$error.message = x$env$error.message
+      res$error.message = x$env$error.message[ind]
     if (!is.null(x$env$exec.time))
-      res$exec.time = x$env$exec.time
+      res$exec.time = x$env$exec.time[ind]
     if (!is.null(x$env$extra))
-      res = cbind(res, convertListOfRowsToDataFrame(x$env$extra))
+      res = cbind(res, convertListOfRowsToDataFrame(x$env$extra[ind]))
   }
   if (!is.null(row.names)) {
     assertCharacter(row.names, len = nrow(res), any.missing = FALSE)
