@@ -1,0 +1,5 @@
+#' @param dob [\code{integer}]\cr
+#'   Vector of date-of-birth values to further subset the result.
+#'   Only elements with a date-of-birth included in \code{dob} are selected.
+#'   Default is all.
+
