@@ -1,0 +1,5 @@
+#' @param eol [\code{integer}]\cr
+#'   Vector of end-of-life values to further subset the result.
+#'   Only elements with an end-of-life included in \code{eol} are selected.
+#'   Default is all.
+
