@@ -3,7 +3,7 @@
 \alias{getOptPathCol}
 \title{Get column from the optimization path.}
 \usage{
-getOptPathCol(op, name)
+getOptPathCol(op, name, dob, eol)
 }
 \arguments{
 \item{op}{[\code{\link{OptPath}}]\cr
@@ -11,6 +11,16 @@ Optimization path.}
 
 \item{name}{[\code{character(1)}]\cr
 Name of the column.}
+
+\item{dob}{[\code{integer}]\cr
+Vector of date-of-birth values to further subset the result.
+Only elements with a date-of-birth included in \code{dob} are selected.
+Default is all.}
+
+\item{eol}{[\code{integer}]\cr
+Vector of end-of-life values to further subset the result.
+Only elements with an end-of-life included in \code{eol} are selected.
+Default is all.}
 }
 \value{
 Single column as a vector.
