@@ -3,7 +3,7 @@
 \alias{getOptPathCols}
 \title{Get columns from the optimization path.}
 \usage{
-getOptPathCols(op, names, row.names = NULL)
+getOptPathCols(op, names, dob, eol, row.names = NULL)
 }
 \arguments{
 \item{op}{[\code{\link{OptPath}}]\cr
@@ -11,6 +11,16 @@ Optimization path.}
 
 \item{names}{[\code{character}]\cr
 Names of the columns.}
+
+\item{dob}{[\code{integer}]\cr
+Vector of date-of-birth values to further subset the result.
+Only elements with a date-of-birth included in \code{dob} are selected.
+Default is all.}
+
+\item{eol}{[\code{integer}]\cr
+Vector of end-of-life values to further subset the result.
+Only elements with an end-of-life included in \code{eol} are selected.
+Default is all.}
 
 \item{row.names}{[\code{character}]\cr
 Row names for result.
