@@ -15,10 +15,14 @@ Names of performance measures to construct pareto front for.
 Default is all performance measures.}
 
 \item{dob}{[\code{integer}]\cr
-Possible dates of birth to select elements from. Defaults to all.}
+Vector of date-of-birth values to further subset the result.
+Only elements with a date-of-birth included in \code{dob} are selected.
+Default is all.}
 
 \item{eol}{[\code{integer}]\cr
-Possible end of life to select elements from. Defaults to all.}
+Vector of end-of-life values to further subset the result.
+Only elements with an end-of-life included in \code{eol} are selected.
+Default is all.}
 
 \item{index}{[\code{logical(1)}]\cr
 Return indices into path of front or y-matrix of nondominated points?
